--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <div class="icons">
   <a href="#!" style="margin-left:20p">
-    <i class="fa fa-camera-retro fa-5x"></i>
+    <span style="margin-left:10px;">OgheneCodes</span>
+    <!-- <i class="fa fa-camera-retro fa-5x"></i> -->
   </a>
 <!DOCTYPE html>
 <html lang="en">
